[project]
name = "cybersignal"
version = "0.1.0"
description = "A unique cyber-risk CLI that detects human + technical risk signals."
authors = [
  { name="Abhi", email="your-email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[project.scripts]
cybersignal = "cybersignal.cli:main"

[tool.setuptools]
packages = ["cybersignal"]
